tests/negative/test_expr_deref_ptr.orb
fnc main() () {
    let x:i32;
    let p:ptr (cast ptr (& x));
    * p;
};